<resources>
    <string name="app_name">GudBox</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_seed_info">Information</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">Main2Activity</string>

    <!-- Nutritional values Dialog -->
    <string name="lorem_ipsum_25">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus rhoncus in est ac vestibulum. Nam vel nisl fringilla, tincidunt arcu at, suscipit sapien. Vivamus dignissim.</string>
    <string name="protein">Protein</string>
    <string name="carbs">Carbohydrates</string>
    <string name="calories">Calories</string>
    <string name="fat">Fat</string>

    <!-- Recommendations Card -->
    <string name="recommendations">Recommendations</string>
    <string name="coldTemp">Min. Temperature</string>
    <string name="warmTemp">Max. Temperature</string>
    <string name="seedingTime">Seeding time</string>
    <string name="sunHrs">Sun hours</string>
    <string name="ph">pH</string>

    <!-- Spacing Card -->
    <string name="ground">Ground</string>
    <string name="volume">Volume</string>
    <string name="depth">Depth</string>
    <string name="separation">Separation</string>
    <string name="radius">Radius</string>
    <string name="plantingSteps"> Planting steps </string>

    <!-- Sensors -->
    <string name="humidity">Humidity</string>
    <string name="temperature">Temperature</string>
    <string name="luminosity">Luminosity</string>
    <string name="ventilation">Ventilation</string>
    <string name="currently">Currently</string>
    <string name="celsius">Celsius</string>

    <!-- Nav Drawer -->
    <string name="profile">Profile</string>
    <string name="ecosystem">Ecosystem</string>
    <string name="sensors">Sensors</string>
    <string name="farming">Farming</string>
    <string name="seeds">Seeds</string>
    <string name="all">All</string>
    <string name="fruits">Fruits</string>
    <string name="vegetables">Vegetables</string>

    <string name="loremHTML">
        <![CDATA[
        <h1>HTML Ipsum Presents</h1><p><strong>Pellentesque habitant morbi tristique</strong> senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. <em>Aenean ultricies mi vitae est.</em> Mauris placerat eleifend leo. Quisque sit amet est et sapien ullamcorper pharetra. Vestibulum erat wisi, condimentum sed, <code>commodo vitae</code>, ornare sit amet, wisi. Aenean fermentum, elit eget tincidunt condimentum, eros ipsum rutrum orci, sagittis tempus lacus enim ac dui. <a href="#">Donec non enim</a> in turpis pulvinar facilisis. Ut felis.</p><h2>Header Level 2</h2><ol><li>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</li><li>Aliquam tincidunt mauris eu risus.</li></ol><blockquote><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus magna. Cras in mi at felis aliquet congue. Ut a est eget ligula molestie gravida. Curabitur massa. Donec eleifend, libero at sagittis mollis, tellus est malesuada tellus, at luctus turpis elit sit amet quam. Vivamus pretium ornare est.</p></blockquote><h3>Header Level 3</h3><ul><li>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</li><li>Aliquam tincidunt mauris eu risus.</li></ul></string>
        ]]>
    </string>
    <string name="title_activity_extra_info_acticity">Information</string>
    <string name="title_activity_planted_seed_info">Information</string>

    <string name="planted">Planted on</string>
    <string name="ready">Ready on</string>


</resources>
