<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_menu_profile"
            android:title="@string/profile" />
    </group>

    <item android:title="@string/ecosystem">
        <menu>
            <item
                android:id="@+id/nav_sensors"
                android:icon="@drawable/ic_menu_sensors"
                android:title="@string/sensors" />
            <item
                android:id="@+id/nav_farm"
                android:icon="@drawable/ic_menu_farm"
                android:title="@string/farming" />
        </menu>
    </item>

    <item android:title="@string/seeds">
        <menu>
            <item
                android:id="@+id/nav_all"
                android:icon="@drawable/ic_menu_all"
                android:title="@string/all" />
            <item
                android:id="@+id/nav_fruits"
                android:icon="@drawable/ic_menu_fruit"
                android:title="@string/fruits" />
            <item
                android:id="@+id/nav_vegetables"
                android:icon="@drawable/ic_menu_vegetables"
                android:title="@string/vegetables" />
        </menu>
    </item>

</menu>
